--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('./sw-bg.jpg');
+  background-image: url('./R&M.jpg');
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+
 }
